test/e2e/fail/008-duplicate-type/expected.stderr
error[E0008]: duplicate type definition
 --> $FILE:3:1
  |
3 | type Pair<A, B> = { first: A, second: B };
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type `Pair` is already defined
  |
